--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AV Gold</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Genos:ital,wght@1,300;1,400;1,500&display=swap');
+      </style>
+    <title>CGTV</title>
   </head>
-  <body>
+  <body style="background-color: black;">
     <div id="root"></div>
     <!--
       This HTML file is a template.
