--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       </style>
     <title>CGTV</title>
   </head>
-  <body style="background-color: black;">
+  <body>
     <div id="root"></div>
     <!--
       This HTML file is a template.
